--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       name="keywords"
       content="Covid-19-Tracker-App , Covid-19 Live update worldwide,Global Covid 19 tracker"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
